<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/askPin"
            android:textColor="@color/textNormal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="left"/>
        <TextView
            android:id="@+id/askPinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="left"/>
        <TextView
            android:id="@+id/askPinUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="left"/>
        <TextView
            android:id="@+id/askPinBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="left"
            android:layout_marginBottom="25dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/askPinInfo"
            android:textColor="@color/textNormal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:layout_margin="15dp"
        android:layout_below="@+id/layoutInfo">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/askPinPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:hint="@string/askPinPin"
                android:maxLength="4"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutInput"
        android:gravity="left"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/askPinInfo2"
        android:textColor="@color/textNormal"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>