<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_only_bottom_linearlayout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutPosisi"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="Posisi Aplikasi"
            android:id="@+id/txtRegno"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="Default"
            android:id="@+id/txtNamaCust"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/posisi"
                android:id="@+id/titlePosisi"></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:id="@+id/txtPosisi"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/tglMulai"
                android:id="@+id/titleTglMulai"></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:id="@+id/txtTglMulai"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/diproses"
                android:id="@+id/titleProses"></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:id="@+id/txtProses"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/lamaproses"
                android:id="@+id/titleLamaProses"></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:id="@+id/txtLamaProses"></TextView>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>